"use strict";
module.exports = {
  async up(queryInterface) {
    await queryInterface.sequelize.query(`
      CREATE TABLE properties (
        property_id           uuid PRIMARY KEY DEFAULT gen_random_uuid(),
        owner_id              uuid REFERENCES users(user_id) ON DELETE CASCADE,
        broker_id             uuid REFERENCES users(user_id) ON DELETE SET NULL,
        sales_id              uuid REFERENCES users(user_id) ON DELETE SET NULL,
        property_type         varchar(50) CHECK (property_type IN ('Residential','Retail','Offices','Industrial','Others')),
        carpet_area           decimal(10,2),
        carpet_area_unit      varchar(20) CHECK (carpet_area_unit IN ('Sq. Feet','Sq. Meters')) DEFAULT 'Sq. Feet',
        completion_year       integer,
        last_refurbished_year integer,
        building_grade        varchar(20) CHECK (building_grade IN ('A+','A','B+','B','C')),
        ownership_type        varchar(50) CHECK (ownership_type IN ('Freehold','Leasehold','Jointly-hold','Government Owned')),
        parking_four_wheeler  integer DEFAULT 0,
        parking_two_wheeler   integer DEFAULT 0,
        power_backup          varchar(20) CHECK (power_backup IN ('Yes','No')),
        number_of_lifts       integer,
        hvac_type             varchar(50) CHECK (hvac_type IN ('Central AC','Split AC','VRF System','Chilled Water System','None')),
        furnishing_status     varchar(100) CHECK (furnishing_status IN ('Fully Furnished by landowner','Semi-Furnished by landowner','Not Furnished by landowner')),
        maintained_by_id      integer REFERENCES caretakers(caretaker_id),
        description           text,
        additional_description text,
        title_status          varchar(50) CHECK (title_status IN ('No Litigation','Pending Litigation')),
        occupancy_certificate varchar(50) CHECK (occupancy_certificate IN ('Yes, available','In Process','Not available')),
        lease_registration    varchar(50) CHECK (lease_registration IN ('Registered Lease','Notorized Lease','No lease document')),
        has_pending_litigation boolean DEFAULT false,
        litigation_details    text,
        rera_number           varchar(50),
        tenant_type           varchar(50) CHECK (tenant_type IN ('Government','Startup','MNC','Corporate','Others')),
        lease_start_date      date,
        lease_end_date        date,
        lock_in_period_years  integer,
        lock_in_period_months integer,
        lease_duration_years  decimal(5,2),
        rent_type             varchar(20) CHECK (rent_type IN ('Per Sq Ft','Lump Sum')) DEFAULT 'Per Sq Ft',
        rent_per_sqft_monthly decimal(10,2),
        total_monthly_rent    decimal(12,2),
        security_deposit_type varchar(20) CHECK (security_deposit_type IN ('Months of Rent','Lump Sum')) DEFAULT 'Months of Rent',
        security_deposit_months integer,
        security_deposit_amount decimal(12,2),
        escalation_frequency_years decimal(5,2),
        annual_escalation_percent  decimal(5,2),
        maintenance_costs_included varchar(50) CHECK (maintenance_costs_included IN ('Yes, included in rent','No, excluded from rent')),
        maintenance_type      varchar(20) CHECK (maintenance_type IN ('Per Sq Ft','Lump Sum')),
        maintenance_amount    decimal(10,2),
        micro_market          varchar(100),
        city                  varchar(100),
        state                 varchar(100),
        demand_drivers        text,
        upcoming_developments text,
        selling_price              decimal(15,2),
        property_tax_annual        decimal(12,2),
        insurance_annual           decimal(12,2),
        other_costs_annual         decimal(12,2),
        total_operating_annual_costs decimal(12,2),
        additional_income_annual   decimal(12,2),
        annual_gross_rent          decimal(12,2),
        gross_rental_yield         decimal(5,2),
        net_rental_yield           decimal(5,2),
        payback_period_years       decimal(5,2),
        is_verified           varchar(20) NOT NULL DEFAULT 'pending' CHECK (is_verified IN ('pending','partial','completed')),
        selling_status        varchar(50) NOT NULL DEFAULT 'verification of requirement' CHECK (selling_status IN (
          'verification of requirement','confirm property match','align visits',
          'negotiations','closing','documentation','final closure'
        )),
        is_active             boolean NOT NULL DEFAULT true,
        created_at            timestamptz NOT NULL DEFAULT now(),
        updated_at            timestamptz NOT NULL DEFAULT now(),
        CONSTRAINT check_owner_or_broker CHECK (owner_id IS NOT NULL OR broker_id IS NOT NULL)
      );
    `);
  },
  async down(queryInterface) {
    await queryInterface.dropTable("properties");
  },
};
